fix: spacing in FriendList

--- a/web-application/client/components/friends/list/FriendList.css
+++ b/web-application/client/components/friends/list/FriendList.css
@@ -2,3 +2,21 @@
     margin: 50px auto;
     text-align: center;
 }
+
+.friend-list__page {
+    display: inline-block;
+    padding-right: 5px;
+}
+
+@media (width <= 700px) {
+    .friend-list__page {
+        display: block;
+        padding: 0;
+        margin: 0;
+    }
+    .friend-list__total {
+        display: block;
+        padding: 0;
+        margin: 0
+    }
+}
